add links & intro

--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
             抱歉，您的浏览器需要升级。
         </h1>
         <ul id="suggestions">
-            <p>为了更快、更好、更安全的浏览体验，<br>我们建议您使用以下浏览器。</p>
-            <li>
-                <span class="icon-font icon-chrome"></span>
-                Google Chrome
-            </li>
+            <p>为了正常使用本站，<br>我们建议您使用以下浏览器。</p>
             <li>
                 <span class="icon-font icon-firefox"></span>
-                Mozilla Firefox
+                <a href="http://www.firefox.com.cn/download/">Mozilla Firefox</a>
+                <div class="intro">
+                    全球超过5亿用户使用的浏览器，你也来下载安装吧！
+                </div>
+            </li>
+            <li>
+                <span class="icon-font icon-chrome"></span>
+                <a href="https://www.google.com/chrome/">Google Chrome</a>
+                <div class="intro">
+                    快速安全的网络浏览器，源自谷歌。
+                </div>
             </li>
             <li>
                 <span class="icon-font icon-ie"></span>
-                Internet Explorer 11+
+                <a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie">Internet Explorer 11</a>
+                <div class="intro">
+                    来自微软的最新的 IE 浏览器，<br>在您的 Windows 系统中运行得快速流畅。
+                </div>
             </li>
         </ul>
     </body>
