#suggestions li on click

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <title>
             抱歉，您的浏览器需要升级。
         </title>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="main.js"></script>
+        <!--
+          ~ Github: https://github.com/zenozeng/upgradeneeded
+          ~ Author: Zeno Zeng <zenoofzeng@gmail.com>
+          ~ License: MIT
+          -->
     </head>
     <body>
         <h1>
@@ -14,7 +21,7 @@
             抱歉，您的浏览器需要升级。
         </h1>
         <ul id="suggestions">
-            <p>为了正常使用本站，<br>我们建议您使用以下浏览器。</p>
+            <p>为了正常使用本站，我们建议您使用以下浏览器。</p>
             <li>
                 <span class="icon-font icon-firefox"></span>
                 <a href="http://www.firefox.com.cn/download/">Mozilla Firefox</a>
@@ -37,5 +44,9 @@
                 </div>
             </li>
         </ul>
+        <div id="copyright">
+            The icons (Fontelico, by Angela Berbentseva and Sebastian Janzen) are
+            lincensed <br>under the CC-BY license.
+        </div>
     </body>
 </html>
