--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
         <meta charset="UTF-8">
         <link href="icons.css" type="text/css" rel="stylesheet">
         <link href="styles.css" type="text/css" rel="stylesheet">
-        <title>
-            抱歉，您的浏览器需要升级。
-        </title>
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <title>抱歉，您的浏览器需要升级。</title>
         <!--
           ~ Github: https://github.com/zenozeng/upgradeneeded
           ~ Author: Zeno Zeng <zenoofzeng@gmail.com>
@@ -23,25 +19,31 @@
         <ul id="suggestions">
             <p>为了正常使用本站，我们建议您使用以下浏览器。</p>
             <li>
-                <span class="icon-font icon-firefox"></span>
-                <a href="http://www.firefox.com.cn/download/">Mozilla Firefox</a>
-                <div class="intro">
-                    全球超过5亿用户使用的浏览器，你也来下载安装吧！
-                </div>
+                <a href="http://www.firefox.com.cn/download/">
+                    <span class="icon-font icon-firefox"></span>
+                    <span class="title">Mozilla Firefox</span>
+                    <span class="intro">
+                        全球超过5亿用户使用的浏览器，你也来下载安装吧！
+                    </span>
+                </a>
             </li>
             <li>
-                <span class="icon-font icon-chrome"></span>
-                <a href="https://www.google.com/chrome/">Google Chrome</a>
-                <div class="intro">
-                    快速安全的网络浏览器，源自谷歌。
-                </div>
+                <a href="https://www.google.com/chrome/">
+                    <span class="icon-font icon-chrome"></span>
+                    <span class="title">Google Chrome</span>
+                    <span class="intro">
+                        快速安全的网络浏览器，源自谷歌。
+                    </span>
+                </a>
             </li>
             <li>
-                <span class="icon-font icon-ie"></span>
-                <a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie">Internet Explorer 11</a>
-                <div class="intro">
-                    来自微软的最新的 IE 浏览器，<br>在您的 Windows 系统中运行得快速流畅。
-                </div>
+                <a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie">
+                    <span class="icon-font icon-ie"></span>
+                    <span class="title">Internet Explorer 11</span>
+                    <span class="intro">
+                        来自微软的最新的 IE 浏览器，<br>在您的 Windows 系统中运行得快速流畅。
+                    </span>
+                </a>
             </li>
         </ul>
         <div id="copyright">
