--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="icons.css" type="text/css" rel="stylesheet">
+        <link href="fontello/css/fontello.css" type="text/css" rel="stylesheet">
         <link href="styles.css" type="text/css" rel="stylesheet">
         <title>抱歉，您的浏览器需要升级。</title>
         <!--
